--- a/metadata.yaml
+++ b/metadata.yaml
@@ -27,6 +27,7 @@ subjects:
 - !lcsh 'Folk songs, Hungarian'
 - !lcc 'PH'
 - !lcsh 'Hungarian poetry'
+- GITenberg
 title: 'Válogatott magyar népdalok
 
   Képes kiadás'
